Revive the project